--- a/index.html
+++ b/index.html
@@ -5,15 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ClassConnect - Student Learning Portal</title>
     <link rel="stylesheet" href="styles.css">
-    <!-- Favicon - place favicon.ico in media folder -->
     <link rel="icon" type="image/x-icon" href="media/favicon.ico">
 </head>
 <body>
     <div class="app-container">
+        <!-- Notifications Bar -->
+        <div class="notifications-bar" id="notifications-bar">
+            <div class="notification-item">
+                <span class="notification-icon">⚠️</span>
+                <span class="notification-text">Math Quiz in 3 days! Start reviewing Chapter 5.</span>
+                <button class="dismiss-btn">×</button>
+            </div>
+            <div class="notification-item">
+                <span class="notification-icon">🔔</span>
+                <span class="notification-text">Science Test in 5 days. Don't forget your lab notes!</span>
+                <button class="dismiss-btn">×</button>
+            </div>
+        </div>
+
         <!-- Header with Navigation -->
         <header class="app-header">
             <div class="logo">
-                <!-- Logo image placeholder - replace with actual logo -->
                 <img src="media/logo.png" alt="ClassConnect Logo" class="logo-img" onerror="this.style.display='none'">
                 <h1>ClassConnect</h1>
                 <span class="tagline">Connect. Learn. Grow.</span>
@@ -50,7 +62,6 @@
                 <div class="welcome-section">
                     <div class="student-profile" id="student-profile">
                         <div class="profile-avatar">
-                            <!-- Student photo placeholder - will use media/students/alex-smith.jpg -->
                             <img src="media/students/alex-smith.jpg" alt="Alex Smith" class="avatar-img" onerror="this.style.display='none'">
                             <span class="avatar-fallback">AS</span>
                         </div>
@@ -71,6 +82,27 @@
                                 <span class="stat-value">6</span>
                                 <span class="stat-label">Subjects</span>
                             </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Detailed Scan Widget -->
+                <div class="widget scan-widget">
+                    <div class="widget-header">
+                        <h3>📊 Academic Workload Scan</h3>
+                    </div>
+                    <div class="scan-results">
+                        <div class="scan-item urgent">
+                            <div class="scan-label">Urgent (Due in ≤5 days)</div>
+                            <div class="scan-value">2 assessments</div>
+                        </div>
+                        <div class="scan-item upcoming">
+                            <div class="scan-label">Upcoming (Due in 6-14 days)</div>
+                            <div class="scan-value">4 assignments</div>
+                        </div>
+                        <div class="scan-item future">
+                            <div class="scan-label">Future (Due in 15+ days)</div>
+                            <div class="scan-value">3 projects</div>
                         </div>
                     </div>
                 </div>
@@ -96,11 +128,11 @@
                             <button id="start-recording" class="mic-btn">🎤 Start</button>
                             <button id="pause-recording" class="mic-btn" disabled>⏸️ Pause</button>
                             <button id="save-transcript" class="upload-btn" disabled>💾 Save Note</button>
-                            <input type="file" id="pdf-upload" accept=".pdf" style="display:none;">
-                            <label for="pdf-upload" class="upload-btn">📄 Upload PDF</label>
+                            <input type="text" id="youtube-url" placeholder="Paste YouTube URL" style="flex:1; padding: 8px; margin: 0 5px; border: 1px solid #ddd; border-radius: 5px;">
+                            <button id="extract-audio" class="upload-btn">▶️ Extract Audio</button>
                         </div>
                         <div class="notes-display" id="notes-display">
-                            <p>Click "Start" to begin voice recording. Your transcript will appear here.</p>
+                            <p>Click "Start" to begin voice recording. Paste YouTube URL to extract audio for notes.</p>
                         </div>
                         <div class="saved-notes" id="saved-notes">
                             <h4>Saved Notes</h4>
@@ -152,7 +184,6 @@
                             <h3>Select a classmate to start chatting</h3>
                             <p>Connect with your peers and collaborate on assignments</p>
                         </div>
-                        <!-- Chat messages will appear here -->
                         <div class="chat-messages" id="chat-messages" style="display:none; padding: 20px; overflow-y: auto; flex:1;"></div>
                         <div class="chat-input-area" id="chat-input-area" style="display:none; padding: 15px; border-top: 1px solid #eee;">
                             <div style="display: flex; gap: 10px;">
@@ -179,53 +210,12 @@
                         <p class="ai-subtitle">Your intelligent learning companion</p>
                     </div>
 
-                    <div class="ai-features">
-                        <div class="feature-card active-feature">
-                            <div class="feature-icon" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);">
-                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2">
-                                    <path d="M9 11l3 3L22 4"></path>
-                                    <path d="M21 12v7a2 2 0 01-2 2H5a2 2 0 01-2-2V5a2 2 0 012-2h11"></path>
-                                </svg>
-                            </div>
-                            <h4>Homework Helper</h4>
-                            <p>Get step-by-step solutions and explanations</p>
-                        </div>
-
-                        <div class="feature-card active-feature">
-                            <div class="feature-icon" style="background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);">
-                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2">
-                                    <circle cx="12" cy="12" r="10"></circle>
-                                    <path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"></path>
-                                    <line x1="12" y1="17" x2="12.01" y2="17"></line>
-                                </svg>
-                            </div>
-                            <h4>Instant Q&A</h4>
-                            <p>Ask anything and get detailed answers instantly</p>
-                        </div>
-
-                        <div class="feature-card active-feature">
-                            <div class="feature-icon" style="background: linear-gradient(135deg, #fa709a 0%, #fee140 100%);">
-                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2">
-                                    <path d="M13 2L3 14h9l-1 8 10-12h-9l1-8z"></path>
-                                </svg>
-                            </div>
-                            <h4>Study Planner</h4>
-                            <p>Personalized schedules based on your goals</p>
-                        </div>
-
-                        <div class="feature-card active-feature">
-                            <div class="feature-icon" style="background: linear-gradient(135deg, #30cfd0 0%, #330867 100%);">
-                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2">
-                                    <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
-                                    <polyline points="14 2 14 8 20 8"></polyline>
-                                    <line x1="16" y1="13" x2="8" y2="13"></line>
-                                    <line x1="16" y1="17" x2="8" y2="17"></line>
-                                    <polyline points="10 9 9 9 8 9"></polyline>
-                                </svg>
-                            </div>
-                            <h4>Exam Prep</h4>
-                            <p>Adaptive practice with instant feedback</p>
-                        </div>
+                    <!-- AI Mode Selector -->
+                    <div class="ai-mode-selector">
+                        <button class="mode-btn active" data-mode="homework">📚 Homework Helper</button>
+                        <button class="mode-btn" data-mode="qna">❓ Instant Q&A</button>
+                        <button class="mode-btn" data-mode="planner">🗓️ Study Planner</button>
+                        <button class="mode-btn" data-mode="exam">🧪 Exam Prep</button>
                     </div>
 
                     <div class="ai-chat-preview">
@@ -241,7 +231,7 @@
                         </div>
                         <div class="ai-response-area" id="ai-response">
                             <div class="sample-response">
-                                <p><strong>Try asking:</strong></p>
+                                <p><strong>Try asking in any mode:</strong></p>
                                 <ul>
                                     <li>“Help me solve 3x² + 5x - 2 = 0”</li>
                                     <li>“Explain the water cycle”</li>
@@ -251,7 +241,7 @@
                             </div>
                         </div>
 
-                        <!-- Practice Problems Section (Hidden by default) -->
+                        <!-- Practice Problems Section -->
                         <div class="practice-section" id="practice-section" style="display: none; margin-top: 30px; padding: 20px; background: #f8f9fa; border-radius: 15px;">
                             <h3 id="practice-title">Practice Problems</h3>
                             <div id="problem-container" style="margin: 20px 0; padding: 20px; background: white; border-radius: 10px; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">
@@ -270,6 +260,18 @@
                 </div>
             </div>
         </main>
+
+        <!-- Persistent Saved Notes Panel (Accessible from all pages) -->
+        <div class="saved-notes-panel" id="saved-notes-panel">
+            <div class="panel-header">
+                <h3>📁 Saved Notes</h3>
+                <button id="toggle-notes-panel" class="panel-toggle">▼</button>
+            </div>
+            <div class="panel-content" id="panel-content">
+                <ul id="global-notes-list"></ul>
+                <p id="no-notes-message">No saved notes yet. Start recording or upload content!</p>
+            </div>
+        </div>
     </div>
 
     <script src="script.js"></script>
