--- a/index.html
+++ b/index.html
@@ -9,18 +9,9 @@
 </head>
 <body>
     <div class="app-container">
-        <!-- Notifications Bar -->
-        <div class="notifications-bar" id="notifications-bar">
-            <div class="notification-item">
-                <span class="notification-icon">⚠️</span>
-                <span class="notification-text">Math Quiz in 3 days! Start reviewing Chapter 5.</span>
-                <button class="dismiss-btn">×</button>
-            </div>
-            <div class="notification-item">
-                <span class="notification-icon">🔔</span>
-                <span class="notification-text">Science Test in 5 days. Don't forget your lab notes!</span>
-                <button class="dismiss-btn">×</button>
-            </div>
+        <!-- Real-Time Notifications Container -->
+        <div class="notifications-container" id="notifications-container">
+            <!-- Notifications will appear here dynamically -->
         </div>
 
         <!-- Header with Navigation -->
@@ -28,7 +19,7 @@
             <div class="logo">
                 <img src="media/logo.png" alt="ClassConnect Logo" class="logo-img" onerror="this.style.display='none'">
                 <h1>ClassConnect</h1>
-                <span class="tagline">Connect. Learn. Grow.</span>
+                <span class="tagline">Learn, Grow, Succeed.</span> <!-- Updated motto -->
             </div>
             <nav class="main-nav">
                 <button class="nav-btn active" data-page="home">
@@ -51,6 +42,16 @@
                         <path d="M2 12l10 5 10-5"></path>
                     </svg>
                     AI Assistant
+                </button>
+                <button class="nav-btn" data-page="notes">
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <line x1="4" y1="4" x2="20" y2="4"></line>
+                        <line x1="4" y1="8" x2="20" y2="8"></line>
+                        <line x1="4" y1="12" x2="12" y2="12"></line>
+                        <line x1="4" y1="16" x2="16" y2="16"></line>
+                        <line x1="4" y1="20" x2="20" y2="20"></line>
+                    </svg>
+                    Saved Notes
                 </button>
             </nav>
         </header>
@@ -134,10 +135,6 @@
                         <div class="notes-display" id="notes-display">
                             <p>Click "Start" to begin voice recording. Paste YouTube URL to extract audio for notes.</p>
                         </div>
-                        <div class="saved-notes" id="saved-notes">
-                            <h4>Saved Notes</h4>
-                            <ul id="notes-list"></ul>
-                        </div>
                     </div>
                 </div>
 
@@ -172,8 +169,8 @@
                         <div class="search-box">
                             <input type="text" placeholder="Search classmates..." id="search-classmates">
                         </div>
-                        <div class="classmates-list" id="classmates-list">
-                            <!-- Classmates will be dynamically loaded here -->
+                        <div class="chat-sessions" id="chat-sessions">
+                            <!-- Chat sessions will be populated here -->
                         </div>
                     </aside>
                     <div class="chat-main" id="chat-main">
@@ -212,16 +209,50 @@
 
                     <!-- AI Mode Selector -->
                     <div class="ai-mode-selector">
-                        <button class="mode-btn active" data-mode="homework">📚 Homework Helper</button>
-                        <button class="mode-btn" data-mode="qna">❓ Instant Q&A</button>
-                        <button class="mode-btn" data-mode="planner">🗓️ Study Planner</button>
-                        <button class="mode-btn" data-mode="exam">🧪 Exam Prep</button>
+                        <button class="mode-btn active" data-mode="homework">
+                            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M9 12l2 2 4-4"></path>
+                                <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2z"></path>
+                            </svg>
+                            📚 Homework Helper
+                        </button>
+                        <button class="mode-btn" data-mode="qna">
+                            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <circle cx="12" cy="12" r="10"></circle>
+                                <line x1="12" y1="16" x2="12" y2="12"></line>
+                                <line x1="12" y1="8" x2="12.01" y2="8"></line>
+                            </svg>
+                            ❓ Instant Q&A
+                        </button>
+                        <button class="mode-btn" data-mode="planner">
+                            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
+                                <line x1="16" y1="2" x2="16" y2="6"></line>
+                                <line x1="8" y1="2" x2="8" y2="6"></line>
+                                <line x1="3" y1="10" x2="21" y2="10"></line>
+                            </svg>
+                            🗓️ Study Planner
+                        </button>
+                        <button class="mode-btn" data-mode="exam">
+                            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
+                                <polyline points="14 2 14 8 20 8"></polyline>
+                                <line x1="16" y1="13" x2="8" y2="13"></line>
+                                <line x1="16" y1="17" x2="8" y2="17"></line>
+                                <polyline points="10 9 9 9 8 9"></polyline>
+                            </svg>
+                            🧪 Exam Prep
+                        </button>
+                    </div>
+
+                    <div class="ai-mode-description" id="ai-mode-description">
+                        <p>📚 <strong>Homework Helper:</strong> Get step-by-step solutions and explanations for your assignments.</p>
                     </div>
 
                     <div class="ai-chat-preview">
                         <h3>Ask me anything...</h3>
                         <div class="chat-input-container">
-                            <input type="text" placeholder="e.g., Help me with quadratic equations or What caused WWII?" id="ai-input">
+                            <input type="text" placeholder="e.g., Help me solve quadratic equations" id="ai-input">
                             <button class="send-btn" id="ai-send-btn">
                                 <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                     <line x1="22" y1="2" x2="11" y2="13"></line>
@@ -231,12 +262,11 @@
                         </div>
                         <div class="ai-response-area" id="ai-response">
                             <div class="sample-response">
-                                <p><strong>Try asking in any mode:</strong></p>
+                                <p><strong>Try asking in Homework Helper mode:</strong></p>
                                 <ul>
                                     <li>“Help me solve 3x² + 5x - 2 = 0”</li>
-                                    <li>“Explain the water cycle”</li>
-                                    <li>“Quiz me on World War II causes”</li>
-                                    <li>“Create a study plan for my math test next week”</li>
+                                    <li>“Explain the Pythagorean theorem”</li>
+                                    <li>“How do I write a thesis statement?”</li>
                                 </ul>
                             </div>
                         </div>
@@ -259,19 +289,34 @@
                     </div>
                 </div>
             </div>
-        </main>
 
-        <!-- Persistent Saved Notes Panel (Accessible from all pages) -->
-        <div class="saved-notes-panel" id="saved-notes-panel">
-            <div class="panel-header">
-                <h3>📁 Saved Notes</h3>
-                <button id="toggle-notes-panel" class="panel-toggle">▼</button>
+            <!-- Saved Notes Page -->
+            <div id="notes-page" class="page">
+                <div class="notes-page-container">
+                    <div class="notes-header">
+                        <h2>📁 Saved Notes</h2>
+                        <div class="notes-actions">
+                            <input type="text" id="search-notes" placeholder="Search notes..." style="padding: 10px; border-radius: 20px; border: 1px solid #ddd; margin-right: 10px;">
+                            <button id="clear-all-notes" class="upload-btn">🗑️ Clear All</button>
+                        </div>
+                    </div>
+                    <div class="notes-list-container" id="notes-list-container">
+                        <!-- Notes will be populated here -->
+                        <div class="no-notes-message" id="no-notes-message">
+                            <svg width="60" height="60" viewBox="0 0 24 24" fill="none" stroke="#8898aa" stroke-width="1.5">
+                                <line x1="4" y1="4" x2="20" y2="4"></line>
+                                <line x1="4" y1="8" x2="20" y2="8"></line>
+                                <line x1="4" y1="12" x2="12" y2="12"></line>
+                                <line x1="4" y1="16" x2="16" y2="16"></line>
+                                <line x1="4" y1="20" x2="20" y2="20"></line>
+                            </svg>
+                            <h3>No saved notes yet</h3>
+                            <p>Start recording voice notes or extract audio from videos to save them here.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="panel-content" id="panel-content">
-                <ul id="global-notes-list"></ul>
-                <p id="no-notes-message">No saved notes yet. Start recording or upload content!</p>
-            </div>
-        </div>
+        </main>
     </div>
 
     <script src="script.js"></script>
